# agent-ctrl

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
agent_workflow/: .env.example  README.md  api_server.py  launch.py
agent_workflow/core/: __init__.py  agent.py  file_context.py  file_tools.py  llm.py  memory.py  persistence.py  review_tools.py  skill.py  sub_agent.py  tool.py
agent_workflow/examples/: autonomous_3d_racing.py  debug_core.py  demo_server.py  manual_integrate.py  test_3d_racing_game.py  test_3d_racing_v3.py  test_3d_racing_v4.py  test_deepseek.py  test_file_context.py  test_new_features.py  test_racing_game.py  test_workflow_merged.py  verify_framework.py
agent_workflow/orchestration/: __init__.py  context_hub.py  rules.py  task.py  workflow.py
agent_workflow/orchestration/workflow/: __init__.py  checkpoint.py  engine.py  presets.py  state.py
agent_workflow/utils/: __init__.py  logging_config.py  report.py
agent_workflow/validation/: __init__.py  runner.py  validators.py
app/: index.html  vite.config.ts
app/src/: App.css  App.tsx  main.tsx
app/src/components/: AgentConfig.tsx  AgentDetail.tsx  AgentSidebar.tsx  ArtifactsPanel.tsx  DemoTemplates.tsx  EventLog.tsx  HelpPanel.tsx  InterventionPanel.tsx  MessageFlow.tsx  StatusBar.tsx  StepChain.tsx  WorkflowBuilder.tsx  WorkflowControl.tsx  WorkflowDAG.tsx  WorkflowLauncher.tsx
app/src/hooks/: useApi.ts
app/src/types/: index.ts
tests/: conftest.py  test_agent.py  test_checkpoint.py  test_file_context.py  test_report.py  test_state.py  test_tool.py  test_validation.py  test_workflow_engine.py
